--- a/package.json
+++ b/package.json
@@ -2,16 +2,36 @@
   "name": "myTube",
   "version": "0.0.0",
   "private": true,
+  "main": "src/App.js",
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "deasync": "^0.1.7",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "mongoose": "^4.4.19",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
