Improved style, added Mongo, and started working on component rendering

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "socket": 8080,
   "db": {
     "host": "localhost",
+    "database": "myTube",
     "username": "myTube",
     "password": "myTube"
   }
