--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7.1",
     "deasync": "^0.1.7",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
@@ -21,6 +23,7 @@
     "mongoose": "^4.4.19",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5"
   },
