--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     ]
   },
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "body-parser": "~1.13.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
