Restyled video player, added quality setting to config, and fixed browserify

--- a/config.json
+++ b/config.json
@@ -9,5 +9,6 @@
   },
   "updateInterval": 300,
   "simultaneousDownloads": 1,
-  "apikey": ""
+  "apikey": "",
+  "quality": "bestvideo[ext!=webm]+bestaudio[ext!=webm]/best[ext!=webm]"
 }
