--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "glob": "^7.0.3",
     "mongoose": "^4.4.19",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
