--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^1.5.3",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
