--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "body-parser": "~1.13.2",
+    "colors": "^1.1.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
@@ -23,7 +24,6 @@
     "express": "~4.13.1",
     "glob": "^7.0.3",
     "mongoose": "^4.4.19",
-    "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
