--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "myTube",
-  "version": "0.0.0",
-  "private": true,
-  "main": "src/App.js",
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+    "name": "my-electron-app",
+    "version": "0.1.0",
+    "author": "your name",
+    "description": "My Electron app",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    },
   "browserify": {
     "transform": [
       "reactify"
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "electron": "^12.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
