--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "socket": 8080,
   "updateInterval": 300,
   "simultaneousDownloads": 1,
-  "apikey": "",
+  "apikey": "AIzaSyAIFRG3KdSkLSo5_PAorogQphb0j-iDI14",
   "quality": "299+140/298+140/137+140/136+140/bestvideo[ext!=webm]+bestaudio[ext!=webm]/best[ext!=webm]",
   "downloadDelay": 1800,
   "db": {
