--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "mongodb": "^3.6.4",
     "mongoose": "^4.4.19",
     "morgan": "~1.6.1",
+    "prompt": "^1.1.0",
     "request": "^2.72.0",
+    "save": "^2.4.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5"
   },
